# pdfsplit

./: .gitignore  LICENSE  README.md  pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/pdfsplit/: __init__.py  cli.py  core.py
tests/: test_split.py
